Page loads the top headlines on start.

--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
                     </div>
                 </div-->
             </div>
-            <div class="page-container">
-            </div>
+            <div class="page-container"></div>
         </div>
     </div>
 </body>
